--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "storybook-addon-designs": "^6.2.1"
   }
 }
