--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "prettier": "^2.6.2",
-    "storybook-addon-designs": "^6.2.1"
+    "storybook-addon-designs": "^6.2.1",
+    "styled-components": "^5.3.5"
   }
 }
