--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
