--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
+    "apollo-server-micro": "^3.8.1",
     "bcrypt": "^5.0.1",
+    "graphql": "^16.5.0",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -42,6 +45,7 @@
     "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "micro-cors": "^0.1.1",
     "prettier": "^2.6.2",
     "storybook-addon-designs": "^6.2.1",
     "styled-components": "^5.3.5"
