--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "babel-loader": "^8.2.5",
+    "cross-fetch": "^3.1.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-plugin-storybook": "^0.5.12",
