--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-micro": "^3.8.1",
     "bcrypt": "^5.0.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
