--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.5",
+    "@aws-sdk/client-s3": "^3.100.0",
     "apollo-server-micro": "^3.8.1",
     "bcrypt": "^5.0.1",
+    "formidable-serverless": "^1.1.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
