--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "micro-cors": "^0.1.1",
     "prettier": "^2.6.2",
     "storybook-addon-designs": "^6.2.1",
+    "storybook-addon-next": "^1.6.6",
     "styled-components": "^5.3.5"
   }
 }
