--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-textarea-autosize": "^8.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
