--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.1",
     "babel-loader": "^8.2.5",
     "cross-fetch": "^3.1.5",
     "eslint": "8.16.0",
